@@ -2678,6 +2678,15 @@ issek
 	deemed particularly spectacular. ... However, after Fafhrd
 	became his acolyte, things somehow began to change.
 		[ Swords In The Mist, by Fritz Leiber ]
+itlachiayaque
+	Tezcatlipoca (Fiery Mirror) was undoubtedly the Jupiter of the
+	Nahua pantheon. He carried a mirror or shield [ Itlachiayaque ],
+	from which he took his name, and in which he was supposed to see
+	reflected the actions and deeds of mankind. The evolution of this
+	god from the status of a spirit of wind or air to that of the
+	supreme deity of the Aztec people presents many points of deep
+	interest to students of mythology.
+		[ The Myths of Mexico and Peru, by Lewis Spence ]
 izchak
 	The shopkeeper of the lighting shop in the town level of the
 	gnomish mines is a tribute to Izchak Miller, a founding member
@@ -3931,11 +3940,6 @@ pear
 	can't find out what it is like unless you can get to that
 	country and taste it for yourself.
 		[ The Last Battle, by C.S. Lewis ]
-*orb of detection
-	This Orb is a crystal ball of exceptional powers.  When
-	carried, it grants ESP, limits damage done by spells, and
-	protects the carrier from magic missiles.  When invoked it
-	allows the carrier to become invisible.
 *orb of fate
 	Some say that Odin himself created this ancient crystal ball,
 	although others argue that Loki created it and forged Odin's
