@@ -164,10 +164,10 @@ A("Sunsword",			LONG_SWORD,
  *	The artifacts for the quest dungeon, all self-willed.
  */
 
-A("The Orb of Detection",	CRYSTAL_BALL,
+A("Itlachiayaque",		SHIELD_OF_REFLECTION,
 	(SPFX_NOGEN|SPFX_RESTR|SPFX_INTEL), (SPFX_ESP|SPFX_HSPDAM), 0,
-	NO_ATTK,	SPDF_NONE,	CARY(AD_MAGM),
-	INVIS,		A_LAWFUL, PM_ARCHEOLOGIST, NON_PM, 2500L ),
+	NO_ATTK,	SPDF_NONE,	CARY(AD_FIRE),
+	SMOKE_CLOUD,	A_LAWFUL, PM_ARCHEOLOGIST, NON_PM, 3000L ),
 
 A("The Heart of Ahriman",	LUCKSTONE,
 	(SPFX_NOGEN|SPFX_RESTR|SPFX_INTEL), (SPFX_DISPL|SPFX_EREGEN), 0,
